--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "materialize-css": "^1.0.0"
+    "materialize-css": "^1.0.0",
+    "vis-network": "^9.1.2"
   }
 }
